# docs/openapi/quotations.json
@@ -6438,6 +6438,17 @@
             "type": "string",
             "pattern": "^(?!^[-+.]*$)[+-]?0*\\d*\\.?\\d*$",
             "title": "Qty Credited"
+          },
+          "hs_code": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Hs Code"
           }
         },
         "type": "object",
@@ -6776,6 +6787,17 @@
               }
             ],
             "title": "Container Number"
+          },
+          "country_of_origin": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Country Of Origin"
           },
           "amount_paid": {
             "type": "string",
